# LEI

./: .gitignore  .gitmodules  README.md
LEI 1ano/1 Semestre/LI2425/project/: immutable-towers.cabal
LEI 2ano/1 Semestre/AlgC2025/src/: T1.c  ficha1.c  ficha1.txt
LEI 2ano/1 Semestre/ArqC/: 04-HMem-Organizacao.pptx  05-Pipelining.pptx  08-ArquitecturasMulticore.pptx  09-OpenMP.pptx
LEI 2ano/1 Semestre/ArqC/PDFsPPTXs/: 02-MediçãoDesempenho.pptx
LEI 2ano/1 Semestre/ArqC2024/PDFsPPTXs/: 01-VonNewmann.pptx  06-SuperEscalaridade.pptx  07-ProcessamentoVectorial.pptx
LEI 2ano/1 Semestre/ArqC2025/: 03-HierarquiaMemoria.pptx  SSH_Login.txt
LEI 2ano/1 Semestre/ArqC2025/src/: PL1
LEI 2ano/1 Semestre/LI3/2425-G46/: README.md
LEI 2ano/2 Semestre/BD/: atualizaEstado.sql  devolucao.sql  extract.py  index.sql  transacao.sql  translate.sql  valorReserva.sql
LEI 2ano/2 Semestre/POO/: Makefile
LEI 2ano/2 Semestre/POO/ProjectPOO/: .gitignore  Makefile  README.md
LEI 2ano/2 Semestre/POO/aula5_gradle/: settings.gradle
LEI 2ano/2 Semestre/POO/aulas/: Makefile
LEI 2ano/2 Semestre/POO/src/: Ficha1.java  Ficha2.java  Ficha3.java  Ficha4.java  LinhaEncomenda.java  Makefile  ModoLampada.java  Musica.java  Stack.java
LEI 2ano/2 Semestre/SO/: Makefile
LEI 2ano/2 Semestre/SO/etc/: erros.txt
LEI 2ano/2 Semestre/SO/project/: LICENSE  client  server
LEI 3ano/1 Semestre/CP/: ficha1.h  ficha1.hs
LEI 3ano/1 Semestre/SD/: Makefile
LEI 3ano/2 Semestre/ADI/: lei3adi02_adult.knwf
LEI 3ano/2 Semestre/ATS/PL6/: CHANGELOG.md  LICENSE  PL6.cabal
LEI 3ano/2 Semestre/ATS/PL6/src/: MyLib.hs
LEI 3ano/2 Semestre/ATS/PL6/test/: Main.hs
LEI 3ano/2 Semestre/CG/: .gitignore
LEI 3ano/2 Semestre/CG/CG2526/: .gitignore  CMakeLists.txt
(+434 files in other folders)
