cabal-version:      3.0
name:               PL6
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             yHugoSoares
maintainer:         hugoferreirasoares@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    build-depends:    base ^>=4.18.3.0,
                      QuickCheck >= 2.14
    hs-source-dirs:   src
    default-language: GHC2021

test-suite PL6-test
    import:           warnings
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:    base ^>=4.18.3.0,
                      PL6,
                      QuickCheck >= 2.14
